--- a/tugasindex.html
+++ b/tugasindex.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Praktikum CSS</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="tugasstyle.css" />
   </head>
   <body>
     <h1>Praktikum CSS</h1>
